// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - NavBar renders correctly with "back" type 1`] = `
<AppBar
  position="fixed"
>
  <Toolbar>
    <IconButton
      className="makeStyles-menuButton-2"
      color="inherit"
      edge="start"
      onClick={[MockFunction]}
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </svg>
    </IconButton>
  </Toolbar>
</AppBar>
`;

exports[`Component - NavBar renders correctly with "menu" type 1`] = `
<AppBar
  position="fixed"
>
  <Toolbar>
    <IconButton
      className="makeStyles-menuButton-2"
      color="inherit"
      edge="start"
      onClick={[MockFunction]}
    >
      <svg
        aria-hidden="true"
        className="MuiSvgIcon-root"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
        />
      </svg>
    </IconButton>
  </Toolbar>
</AppBar>
`;
